--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -205,16 +205,16 @@ jobs:
             -t ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}-dev \
             -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} \
             $(printf '${{ env.DOCKER_IMAGE }}@sha256:%s ' *)
-      - name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ env.DOCKER_IMAGE }}:${{ steps.meta.outputs.version }}
-      - name: Log in to Azure
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Deploy to dev environment
-        uses: azure/container-apps-deploy-action@v2
-        with:
-          containerAppName: ${{ secrets.AZURE_CONTAINER_APP }}
-          resourceGroup: ${{ secrets.AZURE_RESOURCE_GROUP }}
-          imageToDeploy: docker.io/${{ env.DOCKER_IMAGE }}:${{ github.sha }}
+      # - name: Inspect image
+      #   run: |
+      #     docker buildx imagetools inspect ${{ env.DOCKER_IMAGE }}:${{ steps.meta.outputs.version }}
+      # - name: Log in to Azure
+      #   uses: azure/login@v2
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # - name: Deploy to dev environment
+      #   uses: azure/container-apps-deploy-action@v2
+      #   with:
+      #     containerAppName: ${{ secrets.AZURE_CONTAINER_APP }}
+      #     resourceGroup: ${{ secrets.AZURE_RESOURCE_GROUP }}
+      #     imageToDeploy: docker.io/${{ env.DOCKER_IMAGE }}:${{ github.sha }}
